# GameFlat

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
GFUserAuth/: CMakeLists.txt  GFUserAuth.cpp  GFUserAuth.h
GFUserAuth/core/: server.cpp  server.h
GameFlatUI/: CMakeLists.txt  GameFlatUI.cpp  GameFlatUI.h
GameFlatUI/core/: menu.cpp  menu.h  network.cpp  network.h  user.cpp  user.h  window.cpp  window.h
GameFlatUI/lib/: CMakeLists.txt
bin-windows/: run.bat  run_debug.bat
bin-windows/x64-debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
bin-windows/x64-debug/.cmake/api/v1/reply/: cache-v2-8af6c160d98d3af6094c.json  cmakeFiles-v1-99252ee2bf35b74f87cb.json  codemodel-v2-755cfb71b5b9c8d1a5be.json  directory-GameFlatUI.lib-Debug-d64c386f727f70d9b094.json  directory-GameFlatUI.lib.glfw-Debug-dfdc100ee72d2a784706.json  index-2023-11-18T03-22-32-0062.json  target-GFUserAuth-Debug-ab390bfb14ec7487ab50.json  target-GameFlatUI-Debug-5e6cb7ef0c6e8a1ef9d1.json  target-SHA256-Debug-293193afd39d9adcc148.json  target-glfw-Debug-012aacaacf8a1d583cfa.json  target-imgui-Debug-a3944ce3f815c572539a.json  target-uninstall-Debug-2d85bcd988c955b54c39.json  target-update_mappings-Debug-8e6473831db7ea940808.json  toolchains-v1-e66a66f48ce93f5c468d.json
bin-windows/x64-debug/GFUserAuth/: cmake_install.cmake
bin-windows/x64-debug/GameFlatUI/: cmake_install.cmake  imgui.ini
bin-windows/x64-debug/GameFlatUI/lib/: SHA256.lib  cmake_install.cmake
bin-windows/x64-debug/GameFlatUI/lib/glfw/: cmake_install.cmake  cmake_uninstall.cmake
bin-windows/x64-debug/GameFlatUI/lib/glfw/src/: cmake_install.cmake  glfw3.lib  glfw3.pc
bin-windows/x64-debug/isenseconfig/: iconfig.json
bin-windows/x64-release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
bin-windows/x64-release/.cmake/api/v1/reply/: cache-v2-cbdf456c3628868bc588.json  cmakeFiles-v1-07e85feae2e60b4c1443.json  codemodel-v2-16d385695348c68cb7e1.json  directory-GFUserAuth-Release-b69f0307f737159d586d.json  directory-GameFlatUI-Release-9e5095a88ea1213b307f.json  directory-GameFlatUI.lib.glfw-Release-af1538930f676a2bd5e2.json  directory-GameFlatUI.lib.glfw.src-Release-0e3da30d8c30792794e8.json  index-2023-11-18T17-42-00-0290.json  target-GFUserAuth-Release-fb626becd28c7056d2ae.json  target-GameFlatUI-Release-4f2bc52f3391eafffcc3.json  target-SHA256-Release-27539c8f1d7846d9b5f2.json  target-glfw-Release-5486255be8d429ed250c.json  target-imgui-Release-d6f92ab35db4c5208f95.json  target-uninstall-Release-c05c48ce43b6f3a71754.json  target-update_mappings-Release-6cfcdd49cb1062c52060.json
bin-windows/x64-release/GFUserAuth/: cmake_install.cmake
bin-windows/x64-release/GameFlatUI/: cmake_install.cmake  imgui.ini
bin-windows/x64-release/GameFlatUI/lib/: SHA256.lib  cmake_install.cmake  imgui.lib
bin-windows/x64-release/GameFlatUI/lib/glfw/: cmake_install.cmake  cmake_uninstall.cmake
bin-windows/x64-release/GameFlatUI/lib/glfw/src/: cmake_install.cmake  glfw3.lib  glfw3.pc
